Made height 100% instead of 100vh to fix issues on mobile browser

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,10 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
@@ -32,9 +36,14 @@ body {
   background-color: var(--body-bg);
   color: var(--body-color);
   font-size: clamp(.5rem, 2.5vmin, 1rem);
+  height: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  height: 100%;
 }
